# line-sticker-grabber

./: Pipfile  README.md  main.py  pyproject.toml  requirements.txt
