[tool.poetry]
name = "line-sticker-grabber"
version = "0.1.0"
description = ""
authors = ["Anonymous6214 <david20040730@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
lxml = "^5.3.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
